[project]
name = "cordax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    'PyYAML',
    'click',
    'h5py',
    'hdf5plugin',
    'ipykernel',
    'jupyter',
    'lmfit',
    'loguru',
    'matplotlib',
    'numpy',
    'pandas',
    'pydantic',
    'radon',
    'roi-rectangle',
    'scikit-image',
    'scikit_learn',
    'scipy',
    'tables',
    'tifffile',
    'tqdm',
    'tuna'
]
