[project]
name = "cordax"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'PyYAML',
    'click',
    'h5py',
    'hdf5plugin',
    "ipykernel",
    'jupyter',
    'lmfit',
    'loguru',
    'matplotlib',
    'numpy',
    'pandas',
    'pydantic',
    "pyqt6>=6.10.0",
    'radon',
    'roi-rectangle',
    'scikit-image',
    'scikit_learn',
    'scipy',
    'tables',
    'tifffile',
    'tqdm',
    'tuna',
]

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "ruff",
]
